--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.2",
+    "@nuxtjs/supabase": "^1.5.0",
+    "@tailwindcss/vite": "^4.1.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.508.0",
     "nuxt": "^3.17.2",
+    "reka-ui": "^2.2.1",
+    "shadcn-nuxt": "^2.1.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.2.9",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
